apps/2-payments/2-transfer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transfer-svc
  namespace: payments
spec:
  type: ClusterIP
  selector:
    app: transfer-svc
  ports:
    - port: 7071
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-svc
  namespace: payments
  labels:
    app: transfer-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer-svc
  template:
    metadata:
      labels:
        app: transfer-svc
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
        # consul.hashicorp.com/connect-service-upstreams: 'payment-gateway-svc:9091'
        # consul.hashicorp.com/enable-metrics-merging: "false"
    spec:
      serviceAccountName: transfer-svc
      containers:
        - name: transfer-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9091
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
