apps/2-payments/3-payment-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-svc
  namespace: payments
spec:
  selector:
    app: payment-gateway-svc
  ports:
    - port: 7072
      targetPort: 9092
---
# apiVersion: consul.hashicorp.com/v1alpha1
# kind: ServiceDefaults
# metadata:
#   name: payment-gateway-svc
#   namespace: payments
# spec:
#   protocol: "http"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway-svc
  namespace: payments
  labels:
    app: payment-gateway-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-gateway-svc
  template:
    metadata:
      labels:
        app: payment-gateway-svc
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
        # consul.hashicorp.com/connect-service-upstreams: 'fx-service:9091'
        # consul.hashicorp.com/enable-metrics-merging: "false"
    spec:
      serviceAccountName: payment-gateway-svc
      containers:
        - name: payment-gateway-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9092
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
